Modified the homepage view and index template with some stupid text

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <h1>Homepage</h1>
     <h3>This page an example of a working html template with django. </h3>
     <p>The word passed from the backend view for this page is <b>{{sentence}}</b></p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et metus sed nulla auctor accumsan a at nibh. Donec eget ex eu orci condimentum porttitor ac vitae mi. Donec ac porttitor lectus, et scelerisque nulla. Sed risus urna, venenatis in ipsum eget, lobortis placerat lacus. Phasellus quis metus urna. Ut non est non massa sollicitudin rutrum. In turpis dolor, euismod ac accumsan ut, euismod auctor leo. Donec eleifend at sapien id viverra. Maecenas aliquet aliquam erat, at aliquam orci efficitur ut. Morbi tortor elit, pulvinar at eros eget, aliquet pretium tortor.</p>
 
     <div class=""></div>
 </body>
