modified css url

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'app/css/app.css' %}"
-    />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}" />
   </head>
   <body>
     {% include "navbar.html" %}
