--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}" />
+    <style>
+      * {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     {% include "navbar.html" %}
