--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,10 +1,5 @@
+@import url("/static/css/global.css");
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&family=Poppins&family=Roboto&display=swap");
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
 /* 
 Navigation Bar 
@@ -14,7 +9,7 @@ Navigation Bar
 */
 
 .navbar-container {
-  background: #002d3d;
+  background: var(--inactive-dark);
   max-width: 100vw;
   height: 80px;
   position: relative;
@@ -33,8 +28,8 @@ Navigation Bar
 
 .navbar li {
   list-style-type: none;
-  color: #fff;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  color: var(--white-justWhite);
+  font-family: var(--main-font);
 }
 
 /* End of Navigation Bar */
