--- a/templates/index.html
+++ b/templates/index.html
@@ -8,33 +8,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}" />
-    <style>
-      * {
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-      }
-    </style>
   </head>
   <body>
     {% include "navbar.html" %}
-    <h1>Homepage</h1>
-    <h3>This page an example of a working html template with django.</h3>
-    <p>
-      The word passed from the backend view for this page is <b>{{sentence}}</b>
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et metus
-      sed nulla auctor accumsan a at nibh. Donec eget ex eu orci condimentum
-      porttitor ac vitae mi. Donec ac porttitor lectus, et scelerisque nulla.
-      Sed risus urna, venenatis in ipsum eget, lobortis placerat lacus.
-      Phasellus quis metus urna. Ut non est non massa sollicitudin rutrum. In
-      turpis dolor, euismod ac accumsan ut, euismod auctor leo. Donec eleifend
-      at sapien id viverra. Maecenas aliquet aliquam erat, at aliquam orci
-      efficitur ut. Morbi tortor elit, pulvinar at eros eget, aliquet pretium
-      tortor.
-    </p>
+    <!-- show the error message here -->
+    {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+    <!-- show the error message here -->
+    {% block content %}
 
-    <div class=""></div>
+    <!-- if the user is not authenticate, then don't show the logout button -->
+    {% if request.user.is_authenticated %}
+    <h1>Sup, {{request.user}}</h1>
+    <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+    <a href="{% url 'login' %}">Login</a>
+    {% endif %}
+
+    <h1>Main Template over here</h1>
+
+    {% endblock content%}
   </body>
 </html>
