Helped you get your file structure better. Charity service :]

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,7 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&family=Poppins&family=Roboto&display=swap");
 
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  background-repeat: no-repeat;
+}
+
+body {
+  color: var(--white-justWhite);
+  background-color: var(--dark-justDark);
+}
+
 /* 
-Navigation Bar 
+NAVIGATION BAR 
 - navbar-container
 - navbar
 - navbar list
