changed navbar tag from "section" to "nav"

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<section class="navbar-container">
+<nav class="navbar-container">
   
   <ul class="navbar">
     <li>Home</li>
@@ -26,4 +26,4 @@
     </ul>
   {% endif %}
   <!-- show the error message here --> {% endcomment %}
-</section>
+  </nav>
