--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load tailwind_tags %}
 {% load static  %}
 
 <!DOCTYPE html>
@@ -6,11 +7,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
-    {% block headers %} {% endblock headers %}
+    {% tailwind_css %}
+    {% block headers %}
+    {% endblock headers %}
   </head>
   <body>
     {% include "components/navbar.html" %}
