Completed landing look of the landing page
Changes:
1. Added a few new templates that make up the ladning page.
2. Made some tweaks to the navbar to fit our design for the landing page.
3. To accommodate the tweaks made in the navbar, the navbar in base.html was changed to be replaceable when needed.

--- a/static/css/landing_page.css
+++ b/static/css/landing_page.css
@@ -1,3 +1,5 @@
 #hero {
-  background-image: url(/static/images/journey_image.jpg);
+  background-image: url(../images/journey_image.jpg);
+  background-color: rgba(0,0,0,0.3);
+  background-blend-mode: darken;
 }
