--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&family=Poppins&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;500;700&family=Poppins:wght@200;400;500;700&family=Roboto:wght@200;400;500;700&display=swap" rel="stylesheet">
     {% tailwind_css %}
     {% block headers %}
     {% endblock headers %}
   </head>
   <body>
-    {% include "components/navbar.html" %}
+    {% block nav %}
+      {% include "components/navbar.html"%}
+    {% endblock nav %}
     
     {% block content %}
     {% endblock content%}
