--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 {% load static  %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="w-full h-full">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,7 +14,12 @@
     {% block headers %}
     {% endblock headers %}
   </head>
-  <body>
+  <body class="w-full h-full bg-black text-white">
+    <!-- 
+      Due to the different look of the navbar on the landing page,
+      this block could be replaced with what ever block it is need to achieve the look
+      while still have the default look on other pages when it is not replaced.
+     -->
     {% block nav %}
       {% include "components/navbar.html"%}
     {% endblock nav %}
