--- a/templates/app/landing_page.html
+++ b/templates/app/landing_page.html
@@ -18,7 +18,7 @@
       <p class="w-1/2 text-xl text-gray-100">
         {{ site_description }}
       </p>
-      <button class="bg-primary-gradient py-[12px] px-[32px] rounded-md mt-10 font-semibold text-md" type="button">Start Now</button>
+      <a href="#"><button class="bg-primary-gradient py-[12px] px-[32px] rounded-md mt-10 font-semibold text-md">Start Now</button></a>
     </div>
     <div class="relative top-1/4 right-[10rem] w-1/2 h-[400px]">
       <img src="{% static 'images/projects_search.jpg' %}" alt="projects search view" class="w-[70%] absolute left-[30%] rounded-md drop-shadow-lg">
@@ -32,10 +32,29 @@
     </svg>
   </div>
 </section>
-<section id="how_it_works" class="w-full h-full relative">
-  <h2 class="text-[3rem] my-5 text-center">How it Works</h2>
-  
+<section id="how_it_works" class="w-full relative">
+  <h2 class="text-[3rem] my-20 text-center">How it Works</h2>
+  <p class="w-1/2 text-center m-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum suspendisse lorem nunc vivamus egestas ut sed morbi. Eget sapien id iaculis senectus mattis nulla in felis mauris. Arcu aenean placerat donec ut nullam vel, facilisis. Montes, nisl, eget vitae, nisi tortor massa. Ut pharetra lacinia metus nunc turpis lectus pellentesque non. Proin varius porttitor mauris, malesuada amet vulputate. Diam feugiat mattis eu non nisi, erat urna blandit integer. Felis ut non eu varius euismod vel, nisl imperdiet pulvinar. Suscipit fermentum nisl, amet id justo integer montes, ac. Lorem lectus felis, integer dolor. Faucibus nunc mauris maecenas bibendum neque, libero tortor consequat. Euismod nullam gravida aliquet elementum aliquam. Massa auctor at urna adipiscing sollicitudin faucibus sed tristique.</p>
+  <div class="my-20">
+    <h2 class="text-[3rem] my-5 text-center">What are markers?</h2>
+    <div class="grid gap-20 grid-cols-2 grid-rows-1 w-1/4 m-auto">
+      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum arcu bibendum at mauris duis. Sapien pharetra luctus amet nunc amet, augue dui felis. Risus integer pulvinar ipsum bibendum est non dolor odio. Mattis quis pulvinar sociis sit id nulla sit. At id lacus, et in dictum senectus diam. Est platea vehicula donec morbi odio quisque. Quis lectus ac vitae massa turpis eleifend arcu. Quis aliquet ullamcorper volutpat arcu ac gravida. Nulla mauris, euismod magna massa ante sed velit elementum. Cras porttitor mi, morbi dui turpis vitae purus. Nam morbi dis lobortis convallis gravida vulputate scelerisque.</p>
+      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum arcu bibendum at mauris duis. Sapien pharetra luctus amet nunc amet, augue dui felis. Risus integer pulvinar ipsum bibendum est non dolor odio. Mattis quis pulvinar sociis sit id nulla sit. At id lacus, et in dictum senectus diam. Est platea vehicula donec morbi odio quisque. Quis lectus ac vitae massa turpis eleifend arcu. Quis aliquet ullamcorper volutpat arcu ac gravida. Nulla mauris, euismod magna massa ante sed velit elementum. Cras porttitor mi, morbi dui turpis vitae purus. Nam morbi dis lobortis convallis gravida vulputate scelerisque.</p>
+    </div>
+  </div>
+  <div class="my-[10rem] flex flex-col items-center">
+    <h2 class="text-center text-[3rem]">Start Marking Your Journey</h2>
+    <a href="#"><button class="bg-primary-gradient py-[12px] px-[32px] rounded-md mt-10 font-semibold text-md">Start Now</button></a>
+  </div>
 </section>
-<section id="about_us" class="w-full h-full"></section>
+<section id="about_us" class="w-full h-1/4 my-20 flex">
+  <div class="overflow-hidden rounded-[60pt] w-fit">
+    <img src="{% static 'images/team.jpg' %}" alt="Team Member Hands">
+  </div>
+  <div class="w-1/2">
+    <h2 class="text-[3rem]">About Us</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dolor, vitae in tortor nunc ipsum eget dictum. Faucibus sed dolor est ut lacinia platea. Non lobortis sagittis, curabitur iaculis. Facilisis leo ut ultrices mauris sollicitudin id vel nulla amet. Maecenas pretium, ornare tortor, nunc tellus gravida proin cras eget. Varius tristique neque, nunc volutpat platea non massa vitae sed. Non aliquet turpis et facilisi cursus nam nisi. Sagittis morbi vitae sit amet massa nisi, eleifend vitae.</p>
+  </div>
+</section>
 <script src="{% static 'js/script.js' %}"></script>
 {%endblock content%}
