--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -7,7 +7,7 @@
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">Home</li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100"">How It Works</li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100"">About Us</li>
-      <li class="mx-10 cursor-pointer"><a href="#" class="bg-dark-gradient py-2 px-4 rounded-md">Log In</a></li>
+      <li class="mx-10 cursor-pointer"><a href="#"><button  class="bg-dark-gradient py-2 px-4 rounded-md">Log In</button></a></li>
     </ul>
   {% else %}
   <ul class="flex justify-between items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none">
