finished about us and finalized landing page

--- a/templates/app/landing_page.html
+++ b/templates/app/landing_page.html
@@ -47,11 +47,9 @@
     <a href="#"><button class="bg-primary-gradient py-[12px] px-[32px] rounded-md mt-10 font-semibold text-md">Start Now</button></a>
   </div>
 </section>
-<section id="about_us" class="w-full h-1/4 my-20 flex">
-  <div class="overflow-hidden rounded-[60pt] w-fit">
-    <img src="{% static 'images/team.jpg' %}" alt="Team Member Hands">
-  </div>
-  <div class="w-1/2">
+<section id="about_us" class="w-full my-20 flex items-start justify-center">
+  <img src="{% static 'images/team.jpg' %}" alt="Team Member Hands" class="rounded-[20%]">
+  <div class="px-10 w-1/2">
     <h2 class="text-[3rem]">About Us</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dolor, vitae in tortor nunc ipsum eget dictum. Faucibus sed dolor est ut lacinia platea. Non lobortis sagittis, curabitur iaculis. Facilisis leo ut ultrices mauris sollicitudin id vel nulla amet. Maecenas pretium, ornare tortor, nunc tellus gravida proin cras eget. Varius tristique neque, nunc volutpat platea non massa vitae sed. Non aliquet turpis et facilisi cursus nam nisi. Sagittis morbi vitae sit amet massa nisi, eleifend vitae.</p>
   </div>
