--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     {% block headers %}
     {% endblock headers %}
   </head>
-  <body class="w-full h-full bg-black text-white">
+  <body class="w-full h-full bg-black text-white tracking-[0.5px] scroll-smooth">
     <!-- 
       Due to the different look of the navbar on the landing page,
       this block could be replaced with what ever block it is need to achieve the look
