--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -4,9 +4,8 @@
   
   {%if alternate %}
     <ul class="flex justify-end items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none">
-      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">Home</li>
-      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100"">How It Works</li>
-      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100"">About Us</li>
+      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100""><a href="#about_us">About Us</a></li>
+      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100""><a href="#how_it_works">How It Works</a></li>
       <li class="mx-10 cursor-pointer"><a href="#"><button  class="bg-dark-gradient py-2 px-4 rounded-md">Log In</button></a></li>
     </ul>
   {% else %}
@@ -36,4 +35,4 @@
   {% endif %}
   <!-- show the error message here --> 
   {% endcomment %}
-  </nav>
+ </nav>
