form authentication - login and register page
I believe I have completed the login and register feature and styling, and any additional changes can be made later, and everything is working for now...

--- a/templates/app/homepage.html
+++ b/templates/app/homepage.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block headers %} 
-    <title>Hompage</title>
+    <title>Homepage</title>
 {% endblock headers %}
 
 {% block content %}
