--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,11 @@
       while still have the default look on other pages when it is not replaced.
      -->
     {% block nav %}
-      {% include "components/navbar.html"%}
+      <!-- {% include "components/navbar.html"%} -->
     {% endblock nav %}
     
     {% block content %}
     {% endblock content%}
+
   </body>
 </html>
