Changed how a button component is made/style
Previously, a button component was a template and it was included in another template.
However, that solution feels really scuffed and not flexible.
Therefore, a more of styling approach would solve the problem.
This approach focuses on how to make an element look like a button instead of worrying about using the right tag.
As a result, when developing a page, there is no need to worry about the type of the button since it can be defined as a button, anchor or input.
Adding additional classes to fit the current page is also possible because the button is not bound to a pre-defined template.

--- a/templates/app/landingpage.html
+++ b/templates/app/landingpage.html
@@ -17,7 +17,7 @@
       <p class="w-1/2 text-xl text-gray-100">
         {{ site_description }}
       </p>
-      <a href="#"><button class="bg-primary-gradient py-[12px] px-[32px] rounded-md mt-10 font-semibold text-md">Start Now</button></a>
+      <button class="bg-primary-gradient button-xl button-transition mt-10">Start Now</button>
     </div>
     <div class="relative top-1/4 right-[10rem] w-1/2 h-[400px]">
       <img src="{% static 'images/projects_search.jpg' %}" alt="projects search view" class="w-[70%] absolute left-[30%] rounded-md drop-shadow-lg">
