add changes to navbar

--- a/templates/app/landingpage.html
+++ b/templates/app/landingpage.html
@@ -31,7 +31,7 @@
 {% comment %}
   This anchor is needed because when going directly to the section the title will be blocked by the navbar since its position is fixed.
 {% endcomment %}
-<a id="how_it_works"></a> 
+<a id="how_it_works" name="how_it_works"></a> 
 <section id="how_it_works_section" class="w-full relative">
   <article class="w-1/2 m-auto">
     <h2 class="text-[3rem] mt-20 mb-15 text-left w-fit">How it Works</h2>
