--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -4,17 +4,38 @@
   
   {%if alternate %}
     <ul class="flex justify-end items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none">
-      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100""><a href="#about_us">About Us</a></li>
-      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100""><a href="#how_it_works">How It Works</a></li>
-      <li class="mx-10 cursor-pointer"><a href="#"><button  class="bg-dark-gradient py-2 px-4 rounded-md">Log In</button></a></li>
+      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100"><a href="#about_us">About Us</a></li>
+      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100"><a href="#how_it_works">How It Works</a></li>
+      <li class="mx-10 cursor-pointer"><a href="{% url 'login' %}"><button  class="bg-dark-gradient py-2 px-4 rounded-md">Log In</button></a></li>
     </ul>
   {% else %}
-  <ul class="flex justify-between items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none">
+  <!-- nav -->
+  <!-- nav-container -->
+  <div class="flex justify-between items-center w-11/12 h-full my-0 mx-auto text-lg">
+    <!-- links: logo, how, about -->
+    <ul class="flex justify-start items-center h-20">
+      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100"><a href="{% url 'landing_page' %}">Logo</a></li>
+      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100"><a href="{% url 'landing_page' %}">About Us</a></li>
+      <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100"><a href="{% url 'landing_page'%}">How It Works</a></li>
+    </ul>
+    <!-- end of links -->
+    <!-- profile: img, profile-info(name, info) -->
+    <div class="flex justify-start items-center h-20">
+      <div class="border-white border-2 rounded-full w-10 h-10 bg-white"></div>
+      <div class="mx-10">
+        <p class="cursor-pointer opacity-70 hover:opacity-100">Robert Wilson</p>
+        <p class="cursor-pointer opacity-70 hover:opacity-100">info</p>
+      </div>
+    </div>
+    <!-- end of profile -->
+  </div>
+  <!-- end of container -->
+  <!-- <ul class="flex justify-between items-center my-0 mx-auto w-11/12 h-full text-rice-white list-none">
     <li>Home</li>
     <li>How It Works</li>
     <li>About Us</li>
     <li>Resource</li>
-  </ul>
+  </ul> -->
   {% endif %}
 
   {% comment %} <!-- if the user is not authenticate, then don't show the logout button -->
