--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -7,6 +7,7 @@
 @tailwind components;
 
 @layer components {
+
   /* 
   Button base styles.
     They only have styles for the shape but not the background color.
@@ -28,12 +29,36 @@
     @apply py-3 px-8 text-center font-sans font-semibold rounded-md;
   }
 
+  .tech-tag {
+    @apply 
+      border-2 border-solid rounded-md
+      w-fit my-4 mx-2
+      font-bold text-base
+      cursor-pointer
+      transition-colors duration-150
+      inline-block
+    ;
+  }
+
+  .tech-tag-1 {
+    @apply
+      tech-tag
+      py-1 px-2
+      ;
+    }
+    
+    .tech-tag-2 {
+      @apply
+      tech-tag 
+      py-2 px-5
+    ;
+  }
 }
 
 @tailwind utilities;
 
 @layer utilities {
-  /* 
+    /* 
     This utility is to make a button have some animation so that it looks better.
   */
   .button-transition {
@@ -43,6 +68,27 @@
       hover:brightness-125 
       active:ring-2 active:ring-white active:brightness-100 active:duration-[34ms]
       visited:no-underline visited:text-white
+    ;
+  }
+  
+  .tech-tag-blue {
+    @apply 
+      border-sky-400 text-sky-400
+      hover:bg-sky-400 hover:text-sky-900
+    ;
+  }
+
+  .tech-tag-orange {
+    @apply
+      border-orange-400 text-orange-400
+      hover:bg-orange-400 hover:text-orange-900
+    ;
+  }
+
+  .tech-tag-green {
+    @apply
+      border-green-400 text-green-400
+      hover:bg-green-400 hover:text-green-900
     ;
   }
 }
@@ -91,7 +137,8 @@
   --primary-gradient-top-bottom: linear-gradient(to bottom, var(--primary-gradient-color-from), var(--primary-gradient-color-to));
   --dark-gradient-color-from: #535354;
   --dark-gradient-color-to: #020206;
-  --dark-gradient-top-bottom: linear-gradient(to bottom, var(--dark-gradient-color-from), var(--dark-gradient-color-to));
+  --dark-gradient-top-bottom: linear-gradient(to bottom, var(--dark-gradient-color-from), var(--dark-gradient-color-to))
+
   /***** End Of Color *****/
 
   /*****  Typography ******/
