fixed some issues with landing_page

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -15,7 +15,7 @@
     </li>
     <li class="mx-10 cursor-pointer">
       <a href="{% url 'login' %}"
-        ><button class="bg-dark-gradient py-2 px-4 rounded-md">
+        ><button class="button bg-dark-gradient button-transition">
           Log In
         </button></a
       >
