--- a/templates/app/landing_page.html
+++ b/templates/app/landing_page.html
@@ -10,7 +10,7 @@
 {%endblock nav%}
 
 {%block content %}
-<section id="banner" class="w-full h-full bg-cover bg-center bg-origin-border bg-fixed bg-blend-darken bg-[url('/static/images/journey_image.jpg')] bg-black/[.3]">
+<section id="banner" class="w-full h-full bg-cover bg-center bg-origin-border bg-fixed bg-blend-darken bg-[url('/static/images/journey_image.jpg')] bg-[#0000004d]">
   <div class="flex h-[95%]">
     <div class="w-1/2 mt-[10%] ml-[15%]">
       <h1 class="font-bold text-[4rem] w-[70%]">{{ site_title|title|linebreaks }}</h1>
