--- a/templates/app/landing_page.html
+++ b/templates/app/landing_page.html
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="animate-fade-in animation-delay-500 opacity-0">
-    {% include 'svg/double_chevron_down.html' with animate=True %}
+    {% include 'icons/double_chevron_down.html' with class="h-8 w-8 m-auto animate-bounce" %}
   </div>
 </section>
 {% comment %}
@@ -37,7 +37,7 @@
     <h2 class="text-[3rem] mt-20 mb-15 text-left w-fit">How it Works</h2>
     <p class="text-left m-auto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum suspendisse lorem nunc vivamus egestas ut sed morbi. Eget sapien id iaculis senectus mattis nulla in felis mauris. Arcu aenean placerat donec ut nullam vel, facilisis. Montes, nisl, eget vitae, nisi tortor massa. Ut pharetra lacinia metus nunc turpis lectus pellentesque non. Proin varius porttitor mauris, malesuada amet vulputate. Diam feugiat mattis eu non nisi, erat urna blandit integer. Felis ut non eu varius euismod vel, nisl imperdiet pulvinar. Suscipit fermentum nisl, amet id justo integer montes, ac. Lorem lectus felis, integer dolor. Faucibus nunc mauris maecenas bibendum neque, libero tortor consequat. Euismod nullam gravida aliquet elementum aliquam. Massa auctor at urna adipiscing sollicitudin faucibus sed tristique.</p>
   </article>
-  {% include 'svg/double_chevron_down.html' with animate=True classes="my-20"%}
+  {% include 'icons/double_chevron_down.html' with class="h-8 w-8 m-auto animate-bounce" %}
   <div class="my-20 mx-auto w-1/2 min-h-[476px] bg-primary rounded-lg p-10">
     <h3 class="font-bold text-4xl">Step X</h3>
     <div class="my-12 flex justify-between">
@@ -50,7 +50,7 @@
       </p>
     </div>
   </div>
-  {% include 'svg/double_chevron_down.html' with animate=True classes="my-20"%}
+  {% include 'icons/double_chevron_down.html' with class="h-8 w-8 m-auto animate-bounce" %}
   <div class="my-20 mx-auto w-1/2 min-h-[476px] bg-primary rounded-lg p-10">
     <h3 class="font-bold text-4xl">Step X</h3>
     <div class="my-12 flex justify-between">
