Added changes for Project and Project List

--- a/templates/app/project_input1.html
+++ b/templates/app/project_input1.html
@@ -1,8 +1,11 @@
 <form action="">
-    {{form}}
+    {{form.as_table}}
 
     <button type="submit">Submit</button>
 </form>
+
+div
+
 
 
 <!-- <form action="/view function/" method="post">
