--- a/templates/app/landingpage.html
+++ b/templates/app/landingpage.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {%block headers%}
-  <title>Coding Journy</title>
+  <title>Coding Journey</title>
 {%endblock headers%}
 
 {%block nav%}
