--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -120,6 +120,7 @@
       hover:bg-green-400 hover:text-green-900
     ;
   }
+  }
 }
 
 
@@ -166,7 +167,7 @@
   --primary-gradient-top-bottom: linear-gradient(to bottom, var(--primary-gradient-color-from), var(--primary-gradient-color-to));
   --dark-gradient-color-from: #535354;
   --dark-gradient-color-to: #020206;
-  --dark-gradient-top-bottom: linear-gradient(to bottom, var(--dark-gradient-color-from), var(--dark-gradient-color-to))
+  --dark-gradient-top-bottom: linear-gradient(to bottom, var(--dark-gradient-color-from), var(--dark-gradient-color-to));
 
   /***** End Of Color *****/
 
