--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -70,58 +70,66 @@
       py-2 px-5
     ;
   }
+
+  .filter[data-active="true"] {
+    @apply border-primary;
+  }
+
+  .filter-selections[data-active="true"] {
+    @apply block;
+  }
 }
 
 @tailwind utilities;
 
 @layer utilities {
-    /* 
-    This utility is to make a button have some animation so that it looks better.
-  */
-  .button-transition {
-  .tech-tag-blue {
-    @apply 
-      border-sky-400 text-sky-400
-      hover:bg-sky-400 hover:text-sky-900
-    ;
-  }
+      /* 
+      This utility is to make a button have some animation so that it looks better.
+    */
+    .button-transition {
+    .tech-tag-blue {
+      @apply 
+        border-sky-400 text-sky-400
+        hover:bg-sky-400 hover:text-sky-900
+      ;
+    }
 
-  .tech-tag-orange {
-    @apply
-      border-orange-400 text-orange-400
-      hover:bg-orange-400 hover:text-orange-900
-    ;
-  }
+    .tech-tag-orange {
+      @apply
+        border-orange-400 text-orange-400
+        hover:bg-orange-400 hover:text-orange-900
+      ;
+    }
 
-  .tech-tag-green {
-    @apply
-      border-green-400 text-green-400
-      hover:bg-green-400 hover:text-green-900
-    ;
-  }
-  
-  .tech-tag-blue {
-    @apply 
-      border-sky-400 text-sky-400
-      hover:bg-sky-400 hover:text-sky-900
-    ;
-  }
+    .tech-tag-green {
+      @apply
+        border-green-400 text-green-400
+        hover:bg-green-400 hover:text-green-900
+      ;
+    }
+    
+    .tech-tag-blue {
+      @apply 
+        border-sky-400 text-sky-400
+        hover:bg-sky-400 hover:text-sky-900
+      ;
+    }
 
-  .tech-tag-orange {
-    @apply
-      border-orange-400 text-orange-400
-      hover:bg-orange-400 hover:text-orange-900
-    ;
-  }
+    .tech-tag-orange {
+      @apply
+        border-orange-400 text-orange-400
+        hover:bg-orange-400 hover:text-orange-900
+      ;
+    }
 
-  .tech-tag-green {
-    @apply
-      border-green-400 text-green-400
-      hover:bg-green-400 hover:text-green-900
-    ;
+    .tech-tag-green {
+      @apply
+        border-green-400 text-green-400
+        hover:bg-green-400 hover:text-green-900
+      ;
+    }
   }
 }
-
 
 :root {
   /***** Color *****/
