--- a/templates/components/project_list_card.html
+++ b/templates/components/project_list_card.html
@@ -11,7 +11,7 @@
         </div>
         <div class="markers">
             {% for marker in project.markers %}
-                {{% include "/components/marker.html" with marker=marker %}}
+                {% include "/components/marker.html" with marker=marker %}
             {% endfor %}
         </div>
     </div>
