--- a/templates/app/loginregister_page.html
+++ b/templates/app/loginregister_page.html
@@ -43,14 +43,17 @@
             <!-- bg-transparent border-2 border-white w-80 h-10 p-2 -->
               <label for="username" id="username_label">Username</label><br>
               <input type="text" name="username" id="username_input">
-          </div>
-          <div>
+            </div>
+            <div>
               <label for="password" id="password_label">Password</label><br>
               <input type="text" name="password" id="password_input">
+            </div>
           </div>
-        </div>
-        <!-- The end of container for input box -->
-        {% include 'components/button.html' %}
+          {% for input in login_form_inputs %}
+            {% include 'components/input.html' with input_context=input %}
+          {% endfor %}
+          <!-- The end of container for input box -->
+          <button type="submit" class="button">Login</button>
       </form>
     </div>
 
@@ -77,7 +80,7 @@
                 {{form.email}}
           </div>
           <div>
-              <label for="password1" id="password1_label">{{form.password1.label}}</label><br>
+              <label for="password1" id="{{ form.password1.label }}">{{form.password1.label}}</label><br>
                 {{form.password1}}
           </div>
           <div> 
@@ -86,7 +89,7 @@
           </div>
         </div>
         <!-- The end of container for input box -->
-        {% include 'components/button.html' %}
+        <button type="submit" class="button">Register</button>
       </form>
     </div>
     {% endif %}
