--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -33,10 +33,10 @@
         <a href="{% url 'landing_page' %}">Logo</a>
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url 'landing_page' %}">About Us</a>
+        <a href="{% url 'about_us' %}">About Us</a>
       </li>
       <li class="mx-10 cursor-pointer opacity-70 hover:opacity-100">
-        <a href="{% url 'landing_page'%}">How It Works</a>
+        <a href="{% url 'how_it_works'%}">How It Works</a>
       </li>
     </ul>
     <!-- end of links -->
