fixing the main page styling
minor fix of the navbar, fixed it at the top and everything is smooth.

--- a/templates/components/sidemenu.html
+++ b/templates/components/sidemenu.html
@@ -2,7 +2,7 @@
 
 
 <!-- side card -->
-<div class="h-[calc(100%-5rem)] w-80 px-10 pt-10 fixed bottom-0 left-0 z-10 overflow-auto bg-blue-400 ">
+<div class="h-[calc(100%-5rem)] w-80 mt-20 px-10 pt-10 fixed top-0 left-0 overflow-auto bg-blue-400 ">
   <div class="mb-8 space-y-1"> 
       {% include 'components/menu_item.html' with name="Skill Tree"  link="homepage" %}
       {% include 'components/menu_item.html' with name="All Projects"  link="landing_page" %}
