--- a/templates/components/sidemenu.html
+++ b/templates/components/sidemenu.html
@@ -2,11 +2,12 @@
 
 
 <!-- side card -->
-<div class="h-[calc(100%-5rem)] w-80 mt-20 px-10 pt-10 fixed top-0 left-0 overflow-auto bg-blue-400 ">
+<div class="h-[calc(100%-5rem)] w-80 mt-20 px-10 pt-10 fixed top-0 left-0 overflow-auto bg-darker_blue ">
   <div class="mb-8 space-y-1"> 
       {% include 'components/menu_item.html' with name="Skill Tree"  link="homepage" %}
       {% include 'components/menu_item.html' with name="All Projects"  link="landing_page" %}
-      {% include 'components/menu_item.html' with name="Settings"  link="landing_page" %}
+      {% include 'components/menu_item.html' with name="Settings"  link="setting" %}
+      {% include 'components/menu_item.html' with name="Profile"  link="profile" %}
   </div>  
   <!-- the sidebar menu item -->
   <!-- tech card  -->
