get the minimum profile page and setting feature done

--- a/templates/app/homepage.html
+++ b/templates/app/homepage.html
@@ -12,7 +12,8 @@
     {% endblock side_menu %}
 
     {% block side_content %}
-    <div class="ml-80 mt-20 bg-white text-black h-full">
+    <iframe src="" frameborder=""></iframe>
+    <div class="ml-80 mt-20 text-black h-full">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quis quasi exercitationem quibusdam minima deserunt fuga praesentium corrupti enim animi architecto perferendis voluptas obcaecati, cumque nulla ea numquam, cum voluptate!</p>
     </div>
     {% endblock side_content %}
