--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -42,7 +42,7 @@
     <!-- end of links -->
     <!-- profile: img, profile-info(name, info) -->
     <div class="flex justify-start items-center h-20">
-      <div class="border-white border-2 rounded-full w-10 h-10 bg-white"></div>
+      <img src="{% static 'images/avatar.svg' %}" class="w-10 h-10">
       <div class="mx-10">
         <p class="cursor-pointer opacity-70 hover:opacity-100">Robert Wilson</p>
         <p class="cursor-pointer opacity-70 hover:opacity-100">info</p>
