started making a dummy tree for styling

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav
-  class="{% if transparent %} bg-transparent {% else %} bg-dark {% endif %} w-full h-20 {% if alternate %} fixed top-0 left-0 z-[2] {% endif %} transition-all duration-200"
+  class="{% if transparent %} bg-transparent {% else %} bg-foreground {% endif %} w-full h-20 {% if alternate %} fixed top-0 left-0 z-[2] {% endif %} transition-all duration-200"
 >
   {%if alternate %}
   <ul
