finish the profile and setting page

--- a/static/css/tailwind.src.css
+++ b/static/css/tailwind.src.css
@@ -186,7 +186,7 @@
   --white: #fff;
   --black: #000;
   --rice-white: #f1faee;
-  --background: #000b0f;
+  --background: #00141C;
   --dark-background: #002d3d;
   --success: #43d678;
   --active: #559cde;
