--- a/templates/app/about_us_content.html
+++ b/templates/app/about_us_content.html
@@ -1,5 +1,5 @@
 {% load static %}
-<section id="about_us" class="w-full my-[10rem]">
+<section id="about_us" class="w-full my-[10rem] background">
   <article class="w-1/2 m-auto">
     <h2 class="text-[3rem] my-5 text-center">About Us</h2>
     <p class="text-center">
