--- a/templates/app/homepage.html
+++ b/templates/app/homepage.html
@@ -12,8 +12,7 @@
     {% endblock side_menu %}
 
     {% block side_content %}
-    <iframe src="" frameborder=""></iframe>
-    <div class="ml-80 mt-20 text-black h-full">
+    <div class="ml-80 mt-20 text-white h-full bg-background">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quis quasi exercitationem quibusdam minima deserunt fuga praesentium corrupti enim animi architecto perferendis voluptas obcaecati, cumque nulla ea numquam, cum voluptate!</p>
     </div>
     {% endblock side_content %}
